--- a/11_Springboot_Batch/pom.xml
+++ b/11_Springboot_Batch/pom.xml
@@ -10,10 +10,8 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>batch</groupId>
-	<artifactId>job</artifactId>
+	<artifactId>11_Springboot_Batch</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>11_Springboot_Batch</name>
-	<description>Demo project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
