--- a/1_Springboot_MVC/pom.xml
+++ b/1_Springboot_MVC/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>mvc</groupId>
-	<artifactId>springMVC</artifactId>
+	<artifactId>1_Springboot_MVC</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
