--- a/2_Springboot_REST_API/pom.xml
+++ b/2_Springboot_REST_API/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>api</groupId>
-	<artifactId>restAPI</artifactId>
+	<artifactId>2_Springboot_REST_API</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
