--- a/3_Springboot_REST_Client/pom.xml
+++ b/3_Springboot_REST_Client/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>api</groupId>
-	<artifactId>restClient</artifactId>
+	<artifactId>3_Springboot_REST_Client</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
