--- a/4_Springboot_Data_JPA/pom.xml
+++ b/4_Springboot_Data_JPA/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>api</groupId>
-	<artifactId>restAPIAndDataJPA</artifactId>
+	<artifactId>4_Springboot_Data_JPA</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
