--- a/5_Springboot_Security/pom.xml
+++ b/5_Springboot_Security/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>api</groupId>
-	<artifactId>restAPIAndSecurity</artifactId>
+	<artifactId>5_Springboot_Security</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
