--- a/8_MongoDB_Integration/pom.xml
+++ b/8_MongoDB_Integration/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com</groupId>
-	<artifactId>MongoDB_Integration</artifactId>
+	<artifactId>8_MongoDB_Integration</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
