changed project structure and enables https

--- a/END-To-END-REST-API/src/main/resources/application.properties
+++ b/END-To-END-REST-API/src/main/resources/application.properties
@@ -1,14 +1,30 @@
-server.servlet.context-path=/student-management/api
-server.port=8082
+server.servlet.context-path=/user-management/api
+server.port=8443
 
+#In Memory Datasource configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=usermanagement
+spring.datasource.password=usermanagement@12345
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+#Enabling In Memory database console on path '/h2Console'
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2Console
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+# Username and Password for Basic Authentication
+com.user.management.api.username=userManagement
+# Password: userManagement@12345
+com.user.management.api.password=dXNlck1hbmFnZW1lbnRAMTIzNDU=
+#	Basic dXNlck1hbmFnZW1lbnQ6dXNlck1hbmFnZW1lbnRAMTIzNDU=
+
+#SSL Configuration to enable HTTPS
+### > keytool -genkey -alias usermanagement -storetype JKS -keyalg RSA -keysize 2048 -validity 3650 -keystore usermanagement.jks
+server.ssl.enabled=true
+server.ssl.key-alias=usermanagement
+server.ssl.key-password=usermanagement@12345
+server.ssl.key-store=classpath:usermanagement.jks
+server.ssl.key-store-type=JKS
